--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="color_on_primary">#FFEE91</color>
+    <color name="color_on_secondary">#F5C857</color>
+    <color name="color_on_tertiary">#E2852E</color>
+    <color name="color_on_quartery">#ABE0F0</color>
+    <color name="color_text">#FFFFFF</color>
+    <color name="color_text_negative">#000000</color>
 </resources>
