--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_on_primary">
+    android:background="@color/color_background">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -16,8 +16,9 @@
             android:layout_height="0dp"
             android:textColor="@color/color_text_negative"
             android:background="@color/color_on_secondary"
-            android:textSize="18sp"
+            android:textSize="24sp"
             android:gravity="center"
+            android:text="18"
             android:layout_marginBottom="5dp"
             app:layout_constraintBottom_toTopOf="@id/snake_surface"
             app:layout_constraintEnd_toEndOf="parent"
@@ -41,10 +42,11 @@
             android:id="@+id/controls"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="@color/color_on_primary"
+            android:layout_marginTop="10dp"
+            android:background="@color/color_background"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHeight_percent="0.15"
+            app:layout_constraintHeight_percent="0.125"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/snake_surface">
 
@@ -52,7 +54,7 @@
                 android:id="@+id/left"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:background="@color/color_on_secondary"
+                style="@style/Theme.SankeApp.ImageButton"
                 android:src="@drawable/left_arrow"
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="5dp"
@@ -65,7 +67,7 @@
                 android:id="@+id/top"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:background="@color/color_on_secondary"
+                style="@style/Theme.SankeApp.ImageButton"
                 android:src="@drawable/up_arrow"
                 android:layout_marginVertical="5dp"
                 app:layout_constraintBottom_toTopOf="@id/bottom"
@@ -78,7 +80,7 @@
                 android:id="@+id/bottom"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:background="@color/color_on_secondary"
+                style="@style/Theme.SankeApp.ImageButton"
                 android:src="@drawable/down_arrow"
                 android:layout_marginStart="5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -94,7 +96,7 @@
                 android:layout_marginStart="5dp"
                 android:src="@drawable/right_arrow"
                 android:layout_height="match_parent"
-                android:background="@color/color_on_secondary"
+                style="@style/Theme.SankeApp.ImageButton"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/top"
