--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="color_on_primary">#FFEE91</color>
     <color name="color_on_secondary">#F5C857</color>
+    <color name="color_on_secondary_alpha">#33F5C857</color>
     <color name="color_on_tertiary">#E2852E</color>
     <color name="color_on_quartery">#ABE0F0</color>
     <color name="color_background">#FFFFFF</color>
